# sentientos

./: .clangd  .dockerignore  .envrc  .gdbinit  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.ci  LICENSE  README.md  REFACTORINGS.md  SYSCALL_MIGRATION.md  UNSAFE_CODE.md  flake.nix  justfile  qemu_wrapper.sh  readme.md  rust-toolchain  rustfmt.toml  setup-dev.sh  todo.md  typos.toml
kernel/: Cargo.toml  build.rs
kernel/src/: cpu.rs  device_tree.rs  main.rs  panic.rs
kernel/src/asm/: boot.S  mod.rs  powersave.S  trap.S
kernel/src/debugging/: backtrace.rs  eh_frame_parser.rs  mod.rs  symbols.rs  unwinder.rs
kernel/src/drivers/: bochs_display.rs  mod.rs
kernel/src/fs/: devfs.rs  mod.rs  open_file.rs  procfs.rs  tmpfs.rs  vfs.rs
kernel/src/interrupts/: plic.rs  trap.rs  trap_cause.rs
kernel/src/io/: fds.rs  mod.rs  pipe.rs  stdin_buf.rs  tty.rs  tty_device.rs  uart.rs
kernel/src/klibc/: array_vec.rs  big_endian.rs  btreemap.rs  consumable_buffer.rs  elf.rs  mmio.rs  mod.rs  runtime_initialized.rs  spinlock.rs  util.rs
kernel/src/logging/: configuration.rs  mod.rs
kernel/src/memory/: address.rs  heap.rs  linker_information.rs  mod.rs  page.rs  page_allocator.rs  page_table_entry.rs  page_tables.rs  runtime_mappings.rs
kernel/src/net/: arp.rs  checksum.rs  ethernet.rs  ipv4.rs  mod.rs  sockets.rs  tcp.rs  tcp_connection.rs  udp.rs
kernel/src/pci/: address.rs  allocator.rs  devic_tree_parser.rs  mod.rs
kernel/src/processes/: brk.rs  fd_table.rs  futex.rs  kernel_tasks.rs  loader.rs  (+11 more)
userspace/: Cargo.toml
userspace/.cargo/: config.toml
userspace/dash/: Makefile
userspace/doom/: Makefile  dg_solaya.c  i_video_solaya.c
userspace/src/: _start.rs  args.rs  heap.rs  lib.rs  panic.rs  print.rs  spawn.rs  util.rs
(+187 files in other folders)
